--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
             </div>
             <div class="contenedor-busqueda-blanco flex-row align-center">
                 <div class="buscar caja-contenedor-busqueda-blanco caja-contenedor-busqueda-blanco__margin"></div>
-                <div class="boton_buscar"></div>
+                
+                <div class="boton_buscar boton--buscar flex-row align-center">
+                    <div>
+                        <img class="imagen-lupa" src="./assets/Combined Shape.svg" alt="imagen-de-lupa-boton-buscar">
+                    </div>
+                    <div>
+                        <a class="boton-texto boton-texto--buscar " href="#">Buscar</a>
+                    </div>
+                </div>
+
             </div>
             
         </div>
