Nuevo archivo crear-guifo.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <div class="div-botones--barra-navegacion flex-row">
                     <div class="boton-crear boton boton--grande flex-column center">
-                        <a href="#" class="texto-boton-crear boton-texto boton-texto__day boton-texto--grande flex-row" >Crear Guifos</a>
+                        <a href="./crear-guifo.html" class="texto-boton-crear boton-texto boton-texto__day boton-texto--grande flex-row" >Crear Guifos</a>
                     </div>
                     <div class="boton-tema boton boton--mediano flex-column center">
                         <a href="#" class="boton-elegir boton-texto boton-texto--mediano boton-texto__day" >Elegir Tema</a>
