cree section mis guifos y section crear guifo

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -12,29 +12,60 @@
 </head>
 <body>
     <header>
-        <nav class="seccion-barra-navegacion flex-column center">
+        <nav class="seccion-barra-navegacion  flex-column center">
             <div class="pestaña pestaña--top">
                 <h1 class="pestaña-texto pestaña-texto--top">¡Bienvenidos/as a Guifos.com! ——————Donde los gifs están.////// Número de visitas: 12.765.803</h1>
             </div>
-            <div class="div-barra-navegacion flex-row center">
+            <div class="div-barra-navegacion--crear-guifo--html flex-row align-center">
                 <div class="logo">
                     <a class="imglogo" href="/"><img class="srclogo" src="./assets/gifOF_logo.png" alt=""></a>
                 </div>
-
-                <div class="div-botones--barra-navegacion flex-row">
-                    <div class="boton-crear boton boton--grande flex-column center">
-                        <a href="./crear-guifo.html" class="texto-boton-crear boton-texto boton-texto__day boton-texto--grande flex-row" >Crear Guifos</a>
-                    </div>
-                    <div class="boton-tema boton boton--mediano flex-column center">
-                        <a href="#" class="boton-elegir boton-texto boton-texto--mediano boton-texto__day" >Elegir Tema</a>
-                    </div>
-                    <div class="boton-flecha boton boton--pequeno flex-column center">
-                        <a href="#" class="" ><img src="./assets/dropdown.svg" alt="BotonFlechaAbajo"></a>
-                    </div>
-                    <p class="texto-mis-gifos texto flex-row center"><span class="Mdecorada">M</span>is Guifos</p>
-                </div>
+                <a href="/"><img class="flecha-atras" src="/assets/arrow.svg" alt="Flecha-atras"></a>
             </div>
         </nav>
     </header>
+
+    <section class="crear-guifo">
+        <div>
+            <img src="./assets/window img.png" alt="imagen-antigua-window-tipo-sistema-operativo-windows">
+            <h1>
+
+            </h1>
+
+            <p class="parrafo-inicial"></p>
+            <p class="p-numeros-lista"></p><p class="p-texto-lista"></p>
+            <p class="p-numeros-lista"></p><p class="p-texto-lista"></p>
+            <p class="p-numeros-lista"></p><p class="p-texto-lista"></p>
+            <p class="p-numeros-lista"></p><p class="p-texto-lista"></p>
+            <p class="parrafo-final"></p>
+
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+
+    </section>
+
+
+
+    <section class="section-mis-guifos--crear-guifo--html flex-column center">
+        <div class="caja-tendencias caja-titulo">
+            <h1 class="texto texto--caja-titulo texto--caja-titulo__margin">Mis guifos</h1>
+        </div>
+        <div class="div-resultados-mis-guifos--crear-guifo--html flex-row flex-wrap justify-center ">
+
+            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
+            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
+            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
+            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
+            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
+            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
+            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
+            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
+
+        </div>
+    </section>
 </body>
 </html>
