Estilado de texto cuadro

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -28,14 +28,14 @@
     <section class="crear-guifo">
         <div>
             <img src="./assets/window img.png" alt="imagen-antigua-window-tipo-sistema-operativo-windows">
-            <h1>Aquí podrás crear tus propios guifos</h1>
+            <h1 class="texto">Aquí podrás crear tus propios guifos</h1>
             <div>
                 <p class="parrafo-inicial">Crear tu guifo es muy fácil, graba cualquier imagen con tu cámara y obtén guifos personalizados. Los pasos para crear tu guifo son:</p>
-                <div class="flex-row align-center"><p class="p-numeros-lista"></p>1)<p class="p-texto-lista">Dar permisos de acceso a la cámara (sólo por el tiempo de uso)</p></div>
+                <div class="flex-row align-center"><p class="p-numeros-lista "></p>1)<p class="p-texto-lista">Dar permisos de acceso a la cámara (sólo por el tiempo de uso)</p></div>
                 <div class="flex-row align-center"><p class="p-numeros-lista"></p>2)<p class="p-texto-lista">Capturar tu momento guifo</p></div>
                 <div class="flex-row align-center"><p class="p-numeros-lista"></p>3)<p class="p-texto-lista">Revisar el momento</p></div>
                 <div class="flex-row align-center"><p class="p-numeros-lista"></p>4)<p class="p-texto-lista">Listo para subir y compartir!</p></div>
-                <div class="flex-row align-center"><p class="parrafo-final"></p>
+                <p class="parrafo-final">¿Quieres comenzar a crear tu guifo ahora?</p>
             </div>
 
         </div>
