Proceso texto terminado crear guifos

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -26,16 +26,34 @@
     </header>
 
     <section class="section-crear-guifo flex-column center">
-        <div class="caja-crear-guifos-inicio ">
-            <img src="./assets/window img.png" alt="imagen-antigua-window-tipo-sistema-operativo-windows">
-            <h1 class="texto ">Aquí podrás crear tus propios guifos</h1>
-            <div>
-                <p class="parrafo-inicial texto texto--parrafo-crear-guifo-p">Crear tu guifo es muy fácil, graba cualquier imagen con tu cámara y obtén guifos personalizados. Los pasos para crear tu guifo son:</p>
-                <div class="flex-row align-center"><p class="texto texto--p-numeros-lista">1)</p><p class="texto texto--p-lista">Dar permisos de acceso a la cámara (sólo por el tiempo de uso)</p></div>
-                <div class="flex-row align-center"><p class="texto texto--p-numeros-lista">2)</p><p class="texto texto--p-lista">Capturar tu momento guifo</p></div>
-                <div class="flex-row align-center"><p class="texto texto--p-numeros-lista">3)</p><p class="texto texto--p-lista">Revisar el momento</p></div>
-                <div class="flex-row align-center"><p class="texto texto--p-numeros-lista">4)</p><p class="texto texto--p-lista">Listo para subir y compartir!</p></div>
-                <p class="parrafo-final texto texto--parrafo-crear-guifo-p">¿Quieres comenzar a crear tu <strong> <em>guifo</em></strong> ahora?</p>
+
+        <div class="caja-crear-guifos-inicio  flex-column align-center ">
+
+            <div class="div-pestaña-crear-guifos-1">
+                <div class="pestaña pestaña-texto" >
+                    <h1 class="pestaña-texto pestaña--texto__margin" >Crear Guifos</h1>
+                </div>
+            </div>
+
+            <div  class="div-contenedor-texto-crear flex-column center">
+                <div class="div-titulo-crear-guifos flex-row">
+                    <img class="imagen-window" src="./assets/window img.png" alt="imagen-antigua-window-tipo-sistema-operativo-windows">
+                    <h2 class="texto texto--h2-caja-crear-guifos ">Aquí podrás crear tus propios guifos</h2>
+                </div>
+                
+                <div class="caja-crear-guifos-inicio-texto flex-column">
+                    <p class="parrafo-inicial texto texto--parrafo-crear-guifo-p">Crear tu guifo es muy fácil, graba cualquier imagen con tu cámara y obtén guifos personalizados. Los pasos para crear tu guifo son:</p>
+                    <div class="flex-row align-center"><p class="texto texto--p-numeros-lista">1)</p><p class="texto texto--p-lista">Dar permisos de acceso a la cámara (sólo por el tiempo de uso)</p></div>
+                    <div class="flex-row align-center"><p class="texto texto--p-numeros-lista">2)</p><p class="texto texto--p-lista">Capturar tu momento guifo</p></div>
+                    <div class="flex-row align-center"><p class="texto texto--p-numeros-lista">3)</p><p class="texto texto--p-lista">Revisar el momento</p></div>
+                    <div class="flex-row align-center"><p class="texto texto--p-numeros-lista">4)</p><p class="texto texto--p-lista">Listo para subir y compartir!</p></div>
+                    <p class="parrafo-final texto texto--parrafo-crear-guifo-p">¿Quieres comenzar a crear tu <strong> <em>guifo</em></strong> ahora?</p>
+                </div>
+
+                <div>
+
+                </div>
+                
             </div>
 
         </div>
