--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -50,8 +50,8 @@
                     <p class="parrafo-final texto texto--parrafo-crear-guifo-p">¿Quieres comenzar a crear tu <strong> <em>guifo</em></strong> ahora?</p>
                 </div>
 
-                <div>
-
+                <div class="caja-botones-crear-guifos-inicio flex-row align-center ">
+                    <div class="boton boton--crear-gifos center"><a class="boton-texto__day boton-texto" href="#">Cancelar</a></div>
                 </div>
                 
             </div>
