Caja 1  crear guifos terminada

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -51,7 +51,9 @@
                 </div>
 
                 <div class="caja-botones-crear-guifos-inicio flex-row align-center ">
-                    <div class="boton boton--crear-gifos center"><a class="boton-texto__day boton-texto" href="#">Cancelar</a></div>
+                    <div class="boton boton--crear-gifos boton-cancelar-blanco center"><a class="boton-texto__day boton-texto" href="#">Cancelar</a></div>
+                    <div class="boton boton--crear-gifos center"><a class="boton-texto__day boton-texto" href="#">Comenzar</a></div>
+                    
                 </div>
                 
             </div>
