Link mis guifos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="boton-flecha boton boton--pequeno flex-column center">
                         <a href="#" class="" ><img src="./assets/dropdown.svg" alt="BotonFlechaAbajo"></a>
                     </div>
-                    <p class="texto-mis-gifos texto flex-row center"><span class="Mdecorada">M</span>is Guifos</p>
+                    <a href="./crear-guifo.html"><p class="texto-mis-gifos texto flex-row center"><span class="Mdecorada">M</span>is Guifos</p></a>
                 </div>
             </div>
         </nav>
