Estiladp caja grabacion vista2

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -64,7 +64,7 @@
         <div class="caja-crear-guifos-chequeo caja-crear-guifos-chequeo___margin  flex-column align-center">
             <div class="div-pestaña-crear-guifos-2">
                 <img class="x-close" src="./assets/close.svg" alt="imagen-close">
-                <div class="pestaña-crear-guifos-chequeo pestaña pestaña-texto" >
+                <div class="pestaña pestaña-crear-guifos-chequeo" >
                     <h1 class="pestaña-texto pestaña--texto__margin" >Un Chequeo Antes de Empezar</h1>
                 </div>
             </div>
@@ -72,8 +72,8 @@
             <div class="caja-contenedor-grabacion caja-contenedor-grabacion__margin flex-column align-center">
                 <div class="div-contenedor-camara"></div>
             </div>
-            <div class="controles-grabacion">
-                <div>
+            <div class="controles-grabacion flex-row align-center">
+                <div class="boton boton--pequeno center" >
                     <a class="" href="#"><img class="" src="./assets/camera.svg" alt="imagen-camara-boton-grabar"></a>
                 </div>
                 <div class="boton boton--crear-gifos center"><a class="boton-texto__day boton-texto" href="#">Capturar</a></div>
