Botones y Pantalla exito

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -70,9 +70,23 @@
             </div>
 
             <div class="caja-contenedor-grabacion caja-contenedor-grabacion__margin flex-column align-center">
-                <div class="div-contenedor-camara"></div>
+                <div class="div-contenedor-camara flex-column center">
+
+                    <img src="./assets/globe_img.png" alt="imagen-de mapa-mundi">
+                    <p>Estamos subiendo tu guifo…</p>
+                    <div class="cargando"></div>
+                    <p>Tiempo restante: 38 años algunos minutos</p>
+
+
+
+                </div>
             </div>
+
             <div class="controles-grabacion flex-row align-center">
+
+                <div class="caja-contador flex-column center">
+                    <p class="texto">00:00:03:06</p>
+                </div>
 
                 <div class="boton boton--pequeno center" >
                     <a class="" href="#"><img class="imagen-boton" src="./assets/camera.svg" alt="imagen-camara-boton-grabar"></a>
