equis caja exito

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -141,9 +141,10 @@
         <br>
         <div class="caja-exito flex-column align-center ">
 
-            <div class="div-pestaña-crear-guifos-1">
-                <div class="pestaña pestaña-texto" >
-                    <h1 class="pestaña-texto pestaña--texto__margin" >Guifo Subido Con Éxito</h1>
+            <div class="div-pestaña-crear-guifos-2">
+                <img class="x-close" src="./assets/close.svg" alt="imagen-close">
+                <div class="pestaña pestaña-crear-guifos-chequeo" >
+                    <h1 class="pestaña-texto pestaña--texto__margin" >Un Chequeo Antes de Empezar</h1>
                 </div>
             </div>
 
