--- a/index.html
+++ b/index.html
@@ -79,6 +79,19 @@
             </div>
             
         </div>
+
+        <div class="caja-buscar-resultados flex-column justify-evenly">
+            <div class="boton-general boton--grande boton-blanco boton-buscar-largo-buscar-resultados align-center">
+                <a class="boton-texto boton-texto-azul-oscuro boton-texto-margin-left" href="#">Resultado de búsqueda sugerido</a>
+            </div>
+            <div class="boton-general boton--grande boton-blanco boton-buscar-largo-buscar-resultados align-center">
+                <a class="boton-texto boton-texto-azul-oscuro boton-texto-margin-left" href="#">Un resultado similar de búsqueda</a>
+            </div>
+            <div class="boton-general boton--grande boton-blanco boton-buscar-largo-buscar-resultados align-center">
+                <a class="boton-texto boton-texto-azul-oscuro boton-texto-margin-left" href="#">Y otro más</a>
+            </div>
+          
+        </div>
     </section>
 
     <section class="section-sugerimos flex-column align-center">
