--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
 
                         <div class="flex-row">
                             <div class="boton-tema boton boton--mediano flex-column center">
-                                <div class="marco-boton-dotted flex-column center ">
+                                <div class=" flex-column center ">
                                     <a href="#" class="boton-elegir boton-texto boton-texto--mediano boton-texto__day" >Elegir Tema</a>
                                 </div>
                             </div>
                             
                             <div class="boton-flecha boton boton--pequeno flex-column center">
-                                <a href="#" class="" ><img src="./assets/dropdown.svg" alt="BotonFlechaAbajo"></a>
+                                <a href="#" class="flecha-abajo marco-boton-dotted flex-column justify-center" ><img  class="imagen-boton" src="./assets/dropdown.svg" alt="BotonFlechaAbajo"></a>
                             </div>
                         </div>
 
                         <div class="caja-contenedor-cambio-tema flex-column center">
                             <div class="boton-general boton--grande boton-blanco boton-tema-claro align-center">
-                                <a class="boton-texto boton-texto-azul-oscuro boton-tema-texto__margin" href="#">Sailor Day</a>
+                                <a class="boton-texto boton-texto-azul-oscuro boton-texto--saylor boton-texto-margin-left  marco-boton-dotted" href="#">Sailor Day</a>
                             </div>
                             <div class="boton-general boton--grande boton-blanco boton-tema-claro boton-general__margin-top align-center">
-                                <a class="boton-texto boton-texto-azul-oscuro boton-tema-texto__margin" href="#">Sailor Night</a>
+                                <a class="boton-texto boton-texto-azul-oscuro boton-texto--saylor boton-texto-margin-left  marco-boton-dotted" href="#">Sailor Night</a>
                             </div>
                         </div>
                     </div>
