Estado Active boton buscar

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div>
                         <img class="imagen-lupa" src="./assets/Combined Shape.svg" alt="imagen-de-lupa-boton-buscar">
                     </div>
-                    <div>
+                    <div class="div-contenedor-boton-buscar marco-boton-dotted">
                         <a class="boton-texto boton-texto--buscar " href="#">Buscar</a>
                     </div>
                 </div>
