MArco dotted active resultados

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 
         <div class="caja-buscar-resultados flex-column justify-evenly">
             <div class="boton-general boton--grande boton-blanco boton-buscar-largo-buscar-resultados align-center">
-                <a class="boton-texto boton-texto-azul-oscuro boton-texto-margin-left" href="#">Resultado de búsqueda sugerido</a>
+                <a class="boton-texto boton-texto-azul-oscuro boton-texto-largo-buscar-resultados marco-boton-dotted boton-texto-margenes" href="#">Resultado de búsqueda sugerido</a>
             </div>
             <div class="boton-general boton--grande boton-blanco boton-buscar-largo-buscar-resultados align-center">
-                <a class="boton-texto boton-texto-azul-oscuro boton-texto-margin-left" href="#">Un resultado similar de búsqueda</a>
+                <a class="boton-texto boton-texto-azul-oscuro boton-texto-largo-buscar-resultados marco-boton-dotted boton-texto-margenes" href="#">Un resultado similar de búsqueda</a>
             </div>
             <div class="boton-general boton--grande boton-blanco boton-buscar-largo-buscar-resultados align-center">
-                <a class="boton-texto boton-texto-azul-oscuro boton-texto-margin-left" href="#">Y otro más</a>
+                <a class="boton-texto boton-texto-azul-oscuro boton-texto-largo-buscar-resultados marco-boton-dotted boton-texto-margenes" href="#">Y otro más</a>
             </div>
           
         </div>
