--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -7,7 +7,7 @@
         @import url('https://fonts.googleapis.com/css?family=Chakra+Petch:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap');
     </style>
     
-    <link rel="stylesheet" href="Koala/estilo.css" type="text/css">
+    <link rel="stylesheet" href="Koala/estilo-nigth.css" type="text/css">
     <title>Crear GuiFo</title>
 </head>
 <body>
