Link hacia html principal cancelar

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="caja-botones-crear-guifos-inicio flex-row align-center ">
-                    <div class="boton-general boton--grande boton-blanco boton-general__margin30px center"><a class="boton-texto boton-texto-azul-oscuro boton-texto-144px-line-heigth boton-crear-guifos-cancelar marco-boton-dotted" href="#">Cancelar</a></div>
+                    <div class="boton-general boton--grande boton-blanco boton-general__margin30px center"><a class="boton-texto boton-texto-azul-oscuro boton-texto-144px-line-heigth boton-crear-guifos-cancelar marco-boton-dotted" href="/">Cancelar</a></div>
                     <div class="boton-general boton--grande boton-rosado boton-general__margin30px center"><a class="boton-texto boton-texto-azul-oscuro boton-texto-144px-line-heigth boton-crear-guifos-comenzar marco-boton-dotted" href="#">Comenzar</a></div>
                     
                 </div>
