Funcionalidad Cambiar thema

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -196,5 +196,9 @@
 
         </div>
     </section>
+
+
+
+    <!-- <script src="./js/funcionalidad-cambiar_tema.js"></script> -->
 </body>
 </html>
