--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         @import url('https://fonts.googleapis.com/css?family=Chakra+Petch:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap');
     </style>
     
-    <link rel="stylesheet" href="estilos/sailor-day.css" type="text/css">
+    <link rel="stylesheet" href="Koala/estilo.css" type="text/css">
     
     <title>ProyectoGifOS</title>
 </head>
@@ -198,7 +198,7 @@
 
 
 <script src="./js/funcionalidad-dropDown.js"> </script>
-<script src="./js/funcionalidad-cambiar_tema.js"></script>
+<!-- <script src="./js/funcionalidad-cambiar_tema.js"></script> -->
 
 
 </body>
