Codigo Cambiar tema y logo

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -198,7 +198,8 @@
     </section>
 
 
+    <script src="./js/cambiar_tema-index.js"></script>
 
-    <!-- <script src="./js/funcionalidad-cambiar_tema.js"></script> -->
+
 </body>
 </html>
