CAmbio de logo crear guifos en proceso

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="div-barra-navegacion flex-row center">
                 <div class="logo">
                     <a class="imglogo" href="/"><img class="srclogo" src="./assets/gifOF_logo.png" alt=""></a>
+                    <!-- <a class="imglogo" href="/"><img class="srclogo-dia  srclogo-noche  " src="" alt=""></a> -->
                 </div>
 
                 <div class="div-botones--barra-navegacion flex-row">
