--- a/fetch.html
+++ b/fetch.html
@@ -8,7 +8,7 @@
         </style>
         
         <link rel="stylesheet" href="Koala/estilo.css" type="text/css">
-        <title>Document</title>
+        <title>Documento</title>
 
         <style>
             .img-Gif {
