--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Last-Modified" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+    <meta http-equiv="Pragma" content="no-cache">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Chakra+Petch:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap');
     </style>
@@ -183,26 +187,19 @@
             <h1 class="texto texto--caja-titulo texto--caja-titulo__margin">Tendencias</h1>
         </div>
         <div class="div-resultados-tendencias flex-row flex-wrap justify-center ">
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="divtendencias caja-gifs-resultados cajas-gifs-resultados__margin"></div>
+
         </div>
     </section>
 
 
 <script src="./js/dropDown-index.js"> </script>
 <!-- <script src="./js/cambiar_tema-index.js"></script> -->
+<script src="./js/fetch-buscar.js"></script>
 
-
+<script>
+    
+ 
+</script>
 
 
 
