--- a/index.html
+++ b/index.html
@@ -194,11 +194,18 @@
 
 <script src="./js/dropDown-index.js"> </script>
 <!-- <script src="./js/cambiar_tema-index.js"></script> -->
+
+<script src="./js/fetch-tendencias.js"></script>
 <script src="./js/fetch-buscar.js"></script>
 
 <script>
-    
- 
+
+
+
+
+
+
+
 </script>
 
 
