--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <img class="imagen-lupa" src="./assets/Combined Shape.svg" alt="imagen-de-lupa-boton-buscar">
                         </div>
                         <div class="div-contenedor-boton-buscar marco-boton-dotted">
-                            <a class="boton-texto boton-texto--buscar " href="#">Buscar</a>
+                            <a class="boton-texto boton-texto--buscar " href="#tendencias">Buscar</a>
                         </div>
                     </div>
     
@@ -100,7 +100,7 @@
                         <a class="boton-texto boton-texto-blanco boton-texto-largo-buscar-resultados marco-boton-dotted boton-texto-margenes" href="#">Un resultado similar de búsqueda</a>
                     </div>
                     <div class="boton-general boton--grande boton-blanco boton-buscar-largo-buscar-resultados align-center">
-                        <a class="boton-texto boton-texto-blanco boton-texto-largo-buscar-resultados marco-boton-dotted boton-texto-margenes" href="#">Y otro más</a>
+                        <a class="boton-texto boton-texto-blanco boton-texto-largo-buscar-resultados marco-boton-dotted boton-texto-margenes" href="#">Y otro más</a> -->
                     </div>
                 
                 </div>
@@ -193,9 +193,9 @@
 
     <section class="section-tendencias flex-column center">
         <div class="caja-tendencias caja-titulo">
-            <h1 class="texto texto--caja-titulo texto--caja-titulo__margin">Tendencias</h1>
+            <h1  class="texto texto--caja-titulo texto--caja-titulo__margin">Tendencias</h1>
         </div>
-        <div class="div-resultados-tendencias flex-row flex-wrap justify-center ">
+        <div id="tendencias" class="div-resultados-tendencias flex-row flex-wrap justify-center ">
 
         </div>
     </section>
@@ -203,11 +203,11 @@
 
 <script src="./js/dropDown-index.js"> </script>
 <!-- <script src="./js/cambiar_tema-index.js"></script> -->
+<script src="./js/autocompletar.js"></script>
+<script src="./js/fetch-buscar.js"></script>
 <script src="./js/fech-sugerimos.js"></script>
 
 <script src="./js/fetch-tendencias.js"></script>
-<script src="./js/fetch-buscar.js"></script>
-
 
 
 
