--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Chakra+Petch:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap');
     </style>
@@ -68,7 +69,7 @@
 
     </section>
 
-
+<!-- 
 
     <div class="caja-exito flex-column align-center ">
 
@@ -104,9 +105,7 @@
             
         </div>
 
-    </div>
-
-prueba
+    </div> -->
 
     <section class="section-mis-guifos--crear-guifo--html flex-column center">
         <div class="caja-tendencias caja-titulo">
@@ -114,14 +113,8 @@ prueba
         </div>
         <div class="div-resultados-mis-guifos--crear-guifo--html flex-row flex-wrap justify-center ">
 
-            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
-            <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div>
+            <!-- <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div> -->
+            
 
         </div>
     </section>
