Creacion de hashtags

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                    
 
-                    <a class="texto texto-mis-guifos-navegacion flex-row" href="./crear-guifo.html"><p class="texto-mis-guifos">Mis Guifos</p></a>
+                    <a class="texto texto-mis-guifos-navegacion flex-row" href="#"><p class="texto-mis-guifos">Mis Guifos</p></a>
                 </div>
             </div>
         </nav>
