Caja exito en su lugar

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </nav>
     </header>
 
-    <section class="   section-buscar flex-column center" >
+    <section class="section-buscar flex-column center" >
         <div class="caja-busqueda caja-contenedora-buscar flex-column center">
             <div class="pestaña pestaña--caja-buscar pestaña--caja-buscar__margin">
                 <h1 class="pestaña-texto pestaña--texto__margin">Buscar</h1>
@@ -109,7 +109,7 @@
             </div>
     </section>
 
-    <section class="section-sugerimos flex-column align-center">
+    <section id="sugeridos" class="section-sugerimos  align-center">
         <div class="caja-sugerimos caja-titulo">
             <h1 class="texto texto--caja-titulo texto--caja-titulo__margin">Hoy te sugerimos:</h1>
         </div>
@@ -193,7 +193,7 @@
         </div>
     </section>
 
-    <section class="section-tendencias flex-column center">
+    <section id="tendencias" class="section-tendencias flex-column center">
         <div class="caja-tendencias caja-titulo">
             <h1  class="texto texto--caja-titulo texto--caja-titulo__margin">Tendencias</h1>
         </div>
@@ -210,6 +210,8 @@
 <script src="./js/fech-sugerimos.js"></script>
 
 <script src="./js/fetch-tendencias.js"></script>
+<script src="./js/cuadro-dialogo.js"></script>
+<script src="./js/vista-misguifos.js"></script>
 
 <script>
 
