--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="Koala/estilo.css" type="text/css">
     <title>Crear GuiFo</title>
     <style>
-        video {
+        /* video {
             object-fit: fill;
-        }
+        } */
     </style>
 </head>
 <body>
