--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="Expires" content="0">
-    <meta http-equiv="Last-Modified" content="0">
-    <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
-    <meta http-equiv="Pragma" content="no-cache">
+
+
     <style>
         @import url('https://fonts.googleapis.com/css?family=Chakra+Petch:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap');
     </style>
@@ -32,18 +29,18 @@
 
                 <div class="div-botones--barra-navegacion flex-row">
                     <div class="boton-crear boton boton--grande flex-column center">
-                        <a href="./crear-guifo.html" class="texto-boton-crear boton-texto  boton-texto-azul-oscuro  boton-texto__day boton-texto--grande flex-row" >Crear Guifos</a>
+                        <a href="./crear-guifo.html" class="texto-boton-crear boton-texto  boton-texto-azul-oscuro  boton-texto--grande flex-row" >Crear Guifos</a>
                     </div>
                     
                     <div class="dropdown  center caja-contenedor-cambio-tema__margin">
 
-                        <div id="divTema" class="flex-row">
+                        <div id="divTema" class="div-botones-tema flex-row">
                             <div class="boton-tema boton boton--mediano flex-column center">
-                                <a href="#" class="boton-elegir  boton-texto-azul-oscuro   boton-texto boton-texto--mediano boton-texto__day" >Elegir Tema</a>
+                                <a id="texto-tema" href="#" class="boton-elegir  boton-texto-azul-oscuro  boton-texto boton-texto--mediano  boton-texto__day marco-boton-dotted " >Elegir Tema</a>
                             </div>
                             
                             <div class="boton-flecha boton boton--pequeno flex-column center">
-                                <a href="#" class="tema flecha marco-boton-dotted flex-column justify-center" >
+                                <a id="flecha-tema" href="#" class="tema flecha marco-boton-dotted flex-column justify-center" >
                                     <img  class="tema imagen-boton" src="./assets/dropdown.svg" alt="BotonFlechaAbajo">
                                 </a>
                             </div>
@@ -112,7 +109,7 @@
     </section>
 
     <article id="historial" class="article flex-row center" >
-        <ul class="ul-lista flex-row " ></ul>
+        <ul class="ul-lista flex-row flex-nowrap" ></ul>
     </article>    
 
 
