Contador timer funcional

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             
                         <div id="myDropdown" class="dropdown-contenedor  flex-column caja-contenedor-cambio-tema  center">
                             <div class="boton-saylor-day boton-general boton--grande boton-blanco boton-tema-claro align-center">
-                                <a class="boton-texto boton-texto-blanco boton-texto--saylor boton-texto-margin-left  marco-boton-dotted" href="#">Sailor Day</a>
+                                <a id="sailor-day"class="boton-texto boton-texto-blanco boton-texto--saylor boton-texto-margin-left  marco-boton-dotted" href="#">Sailor Day</a>
                             </div>
                             <div class="boton-general boton--grande boton-blanco boton-tema-claro boton-general__margin-top align-center">
                                 <a class="boton-texto boton-texto-blanco boton-texto--saylor boton-texto-margin-left  marco-boton-dotted" href="#">Sailor Night</a>
@@ -231,11 +231,7 @@
 <script src="./js/vistas-home.js"></script>
 
 <script>
-
-
-   
-
-
+console.log(document.getElementsByTagName("p"));
 </script>
 
 
