Rayita abajo hover sailor texto

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -44,7 +44,7 @@
                 </div>
                 
                 <div class="caja-crear-guifos-inicio-texto flex-column">
-                    <p class="parrafo-inicial texto texto--parrafo-crear-guifo-p">Crear tu guifo es muy fácil, graba cualquier imagen con tu cámara y obtén guifos personalizados. Los pasos para crear tu guifo son:</p>
+                    <p class="parrafo-inicial texto texto--parrafo-crear-guifo-p">Crear tu <strong> <em>guifo</em></strong> es muy fácil, graba cualquier imagen con tu cámara y obtén guifos personalizados. Los pasos para crear tu guifo son:</p>
                     <div class="flex-row align-center"><p class="texto texto--p-numeros-lista">1)</p><p class="texto texto--p-lista">Dar permisos de acceso a la cámara (sólo por el tiempo de uso)</p></div>
                     <div class="flex-row align-center"><p class="texto texto--p-numeros-lista">2)</p><p class="texto texto--p-lista">Capturar tu momento guifo</p></div>
                     <div class="flex-row align-center"><p class="texto texto--p-numeros-lista">3)</p><p class="texto texto--p-lista">Revisar el momento</p></div>
