Estilos sailor nigth

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             
                         <div id="myDropdown" class="dropdown-contenedor  flex-column caja-contenedor-cambio-tema  center">
                             <div class="boton-saylor-day boton-general boton--grande boton-blanco boton-tema-claro align-center">
-                                <a id="sailor-day"class="boton-texto boton-texto-blanco boton-texto--saylor boton-texto-margin-left  marco-boton-dotted" href="#"><p class="texto-p-saylor">Sailor Day</p></a>
+                                <a id="sailor-day"class="boton-texto boton-texto-blanco boton-texto--saylor boton-texto-margin-left" href="#"><p class="texto-p-saylor boton-texto-blanco">Sailor Day</p></a>
                             </div>
                             <div class="boton-general boton--grande boton-blanco boton-tema-claro boton-general__margin-top align-center">
-                                <a class="boton-texto boton-texto-blanco boton-texto--saylor boton-texto-margin-left  marco-boton-dotted" href="#"><p class="texto-p-saylor">Sailor Night</p></a>
+                                <a class="boton-texto boton-texto-blanco boton-texto--saylor boton-texto-margin-left  boton-texto--saylor" href="#"><p class="texto-p-saylor boton-texto-blanco">Sailor Night</p></a>
                             </div>
                         </div>
                     </div>
