Cambios de sailor

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -80,10 +80,10 @@
 
    
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
-    <!-- <script src="./js/fetch-tendencias.js"></script> -->
+    <script src="./js/fetch-tendencias.js"></script>
     <script src="./js/cuadro-dialogo.js"></script>
   
-    <!-- <script src="./js/cambiar_tema-index.js"></script> -->
+    <script src="./js/cambiar_tema-index.js"></script>
 
     
 </body>
