Haciend cabios de tema

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         @import url('https://fonts.googleapis.com/css?family=Chakra+Petch:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap');
     </style>
     
-    <link rel="stylesheet" href="Koala/estilo.css" type="text/css">
-    <!-- <link rel="stylesheet" href="estilos/sailor-day.css" type="text/css"> -->
+    <!-- <link rel="stylesheet" href="Koala/estilo.css" type="text/css"> -->
+    <link rel="stylesheet" href="./estilos/sailor-day.css" type="text/css">
     
     <title>ProyectoGifOS</title>
 </head>
@@ -219,9 +219,9 @@
         </div>
     </section>
 
-
+    <script src="./js/cambiar_tema-index.js"></script>
 <script src="./js/dropDown-index.js"> </script>
-<!-- <script src="./js/cambiar_tema-index.js"></script> -->
+
 <script src="./js/autocompletar.js"></script>
 <script src="./js/fetch-buscar.js"></script>
 <script src="./js/fech-sugerimos.js"></script>
