--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -8,7 +8,7 @@
         @import url('https://fonts.googleapis.com/css?family=Chakra+Petch:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap');
     </style>
     
-    <link rel="stylesheet" href="Koala/estilo.css" type="text/css">
+    <link rel="stylesheet" href="./estilos/sailor-day.css" type="text/css">
     <title>Crear GuiFo</title>
 
 </head>
@@ -80,7 +80,7 @@
 
    
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
-    <script src="./js/fetch-tendencias.js"></script>
+    <!-- <script src="./js/fetch-tendencias.js"></script> -->
     <script src="./js/cuadro-dialogo.js"></script>
   
     <script src="./js/cambiar_tema-index.js"></script>
