Unificacion de js

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -72,18 +72,18 @@
         </div>
         <div class="div-resultados-mis-guifos--crear-guifo--html flex-row flex-wrap justify-center ">
 
-            <!-- <div class="div-mis-guifos caja-gifs-resultados cajas-gifs-resultados__margin"></div> -->
-            
+        <!-- Aqui van los gifs -->
 
         </div>
     </section>
 
    
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
+    <script src="./js/crear-guifo.js"></script>
     <!-- <script src="./js/fetch-tendencias.js"></script> -->
-    <script src="./js/cuadro-dialogo.js"></script>
-  
-    <script src="./js/cambiar_tema-index.js"></script>
+    <!-- <script src="./js/cuadro-dialogo.js"></script> -->
+<!--   
+    <script src="./js/cambiar_tema-index.js"></script> -->
 
     
 </body>
