--- a/index.html
+++ b/index.html
@@ -222,21 +222,17 @@
         </div>
     </section>
 
-    <script src="./js/cambiar_tema-index.js"></script>
-<script src="./js/dropDown-index.js"> </script>
+<script src="./js/index.js"></script>
+<!-- <script src="./js/cambiar_tema-index.js"></script> -->
+<!-- <script src="./js/dropDown-index.js"> </script> -->
 
-<script src="./js/autocompletar.js"></script>
-<script src="./js/fetch-buscar.js"></script>
-<script src="./js/fech-sugerimos.js"></script>
+<!-- <script src="./js/autocompletar.js"></script> -->
+<!-- <script src="./js/fetch-buscar.js"></script> -->
+<!-- <script src="./js/fech-sugerimos.js"></script> -->
 
-<script src="./js/fetch-tendencias.js"></script>
-<script src="./js/cuadro-dialogo.js"></script>
-<script src="./js/vistas-home.js"></script>
-
-<script>
-console.log(document.getElementsByTagName("p"));
-</script>
-
+<!-- <script src="./js/fetch-tendencias.js"></script> -->
+<!-- <script src="./js/cuadro-dialogo.js"></script> -->
+<!-- <script src="./js/vistas-home.js"></script> -->
 
 </body>
 </html>
