liminacion d rchivos modificacion css nigth

--- a/crear-guifo.html
+++ b/crear-guifo.html
@@ -20,9 +20,9 @@
             </div>
             <div class="div-barra-navegacion--crear-guifo--html flex-row align-center">
                 <div class="logo">
-                    <a class="imglogo" href="/"><img class="srclogo" src="./assets/gifOF_logo.png" alt=""></a>
+                    <a class="imglogo" href="index.html"><img class="srclogo" src="./assets/gifOF_logo.png" alt=""></a>
                 </div>
-                <a href="/"><img class="flecha-atras" src="/assets/arrow.svg" alt="Flecha-atras"></a>
+                <a href="index.html"><img class="flecha-atras" src="./assets/arrow.svg" alt="Flecha-atras"></a>
             </div>
         </nav>
     </header>
@@ -80,10 +80,7 @@
    
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
     <script src="./js/crear-guifo.js"></script>
-    <!-- <script src="./js/fetch-tendencias.js"></script> -->
-    <!-- <script src="./js/cuadro-dialogo.js"></script> -->
-<!--   
-    <script src="./js/cambiar_tema-index.js"></script> -->
+
 
     
 </body>
